<resources>
    <string name="app_name">People_Here</string>
    <string name="menu_search">둘러보기</string>
    <string name="menu_wish">위시리스트</string>
    <string name="menu_making_course">코스 만들기</string>
    <string name="menu_message">메세지</string>
    <string name="menu_profile">프로필</string>
    <string name="making_tour_progress_1">1/8</string>
    <string name="making_tour_progress_2">2/8</string>
    <string name="making_tour_progress_3">3/8</string>
    <string name="making_tour_progress_4">4/8</string>
    <string name="making_tour_progress_5">5/8</string>
    <string name="making_tour_progress_6">6/8</string>
    <string name="making_tour_progress_7">7/8</string>
    <string name="making_tour_progress_8">8/8</string>
    <string name="making_tour_exit">저장 후 나가기</string>
    <string name="making_tour_headline">유형을 선택하세요</string>
    <string name="making_tour_supporting">최대 3개까지 선택하세요</string>
    <string name="making_tour_road_tour">로드 투어</string>
    <string name="making_tour_cafe_tour">카페 투어</string>
    <string name="making_tour_food_tour">맛집 투어</string>
    <string name="making_tour_exhibition">전시·관람</string>
    <string name="making_tour_activity">액티비티</string>
    <string name="making_tour_picnic">피크닉</string>
    <string name="making_tour_landmark">랜드마크</string>
    <string name="making_tour_healing_tour">힐링투어</string>
    <string name="making_tour_party">파티</string>
    <string name="making_tour_night_view">야경 투어</string>
    <string name="making_tour_amusement">유원지</string>
    <string name="making_tour_shopping">쇼핑</string>
    <string name="making_tour_no_choice">해당하는 유형이 없어요</string>
    <string name="making_tour_next">다음</string>
    <string name="activity_title_type_title">제목을 작성하세요</string>
    <string name="activity_title_short">짧은 제목이 여행자들을 더 쉽게 사로잡아요.\n 나중에 언제든지 수정할 수 있어요.</string>
    <string name="making_tour_time_headline">전체 소요 시간을 알려주세요</string>
    <string name="making_tour_time_subtitle">장소간 이동과 여유 시간을 고려하세요.</string>
    <string name="dialog_max_picture_out_of_range">장소 별 최대 사진 개수 초과</string>
    <string name="dialog_max_picture_explain">한 장소에 최대 5장까지 추가할 수 있어요.</string>
    <string name="dialog_max_picture_ok">확인</string>
    <string name="making_tour_add_list_headline">투어 코스를 계획하세요</string>
    <string name="making_tour_add_list_subtitle">장소를 추가하고 나만의 코스를 만들어요</string>
    <string name="making_tour_add_list_edit_sequence">순서 편집</string>
    <string name="making_tour_add_list_finish_sequence">순서 저장</string>
    <string name="making_tour_add_list_place_first">여행자와 처음 만나는 장소</string>
    <string name="making_tour_add_list_place_plus">장소 추가</string>
    <string name="making_tour_add_list_nothing">더 이상 장소를 추가할 수 없어요</string>
    <string name="making_tour_add_list_place_cancel">취소</string>
    <string name="making_tour_add_list_place_delete">장소 삭제</string>
    <string name="making_tour_add_list_sequence_headline">순서 편집 나가기</string>
    <string name="making_tour_add_list_sequence_subtitle">편집한 순서를 저장하지 않고 나갑니다.</string>
    <string name="making_tour_add_list_sequence_continue">계속 편집</string>
    <string name="making_tour_add_list_sequence_exit">나가기</string>
    <string name="making_tour_add_list_delete_cancel">취소</string>
    <string name="making_tour_add_list_delete_confirm">삭제</string>
    <string-array name="minute_values">
        <item>00</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
    </string-array>
    <string-array name="hour_values">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>

    </string-array>
    <string name="tour_contents_meeting_people">만나게 될 사람</string>
    <string name="tour_contents_meeting_people_language">구사 언어</string>
    <string name="tour_contents_meeting_course">데이트립 소개</string>
    <string name="tour_contents_more">더보기</string>
    <string name="tour_contents_meeting_place">장소</string>
    <string name="tour_contents_review">님에 대한 후기</string>
    <string name="tour_contents_review_first">후기</string>
    <string name="tour_contents_date">일정</string>
    <string name="tour_contents_review_last">개 모두 보기</string>
    <string name="tour_contents_coming_date">가까운 일정</string>
    <string name="tour_contents_correction">참여 가능한 일정</string>
    <string name="review_title">님에 대한 후기</string>
    <string name="review_count">개</string>
    <string name="review_date">전</string>
    <string name="coming_date_before">(</string>
    <string name="coming_date_after">)</string>
    <string name="coming_date_none">시간 협의</string>
    <string name="coming_date_center">-</string>
    <string name="coming_date_enjoy">참여</string>
    <string name="coming_date_ongoing">참여 요청 중</string>
    <string name="day_trip_contents_possible_enjoy">참여 가능한 일정·</string>
    <string name="tour_request_participate">참여 요청하기</string>
    <string name="tour_register_btn">동의 및 요청하기</string>
    <string name="tour_service_before">약관을 동의함으로써</string>
    <string name="tour_service_after">에 동의합니다.</string>
    <string name="tour_dates">일정</string>
    <string name="btn_see_main">다른 데이트립 둘러보기</string>
    <string name="btn_see_message">메시지에서 요청 내용 확인</string>
    <string name="join_confirm_title">참여 요청이 완료되었습니다</string>
    <string name="join_confirm_subtitle">24시간 내에 참여가 확정되지 않으면\n자동으로 요청이 철회돼요</string>
    <string name="terms_of_service_1">법적 약관</string>
    <string name="terms_of_service_2">한국 내 정보의 수집 및 사용
</string>
    <string name="terms_of_service_3">피플히어가 수집하는 개인정보
</string>
    <string name="terms_of_service_4">피플히어 플랫폼을 이용하는 데 필요한 정보</string>
    <string name="terms_of_service_5">당사는 회원님이 피플히어 플랫폼을 이용할 때 회원님의 개인정보를 수집합니다. 그렇지 않은 경우, 피플히어는 요청하신 서비스를 회원님께 제공하지 못할 수 있습니다. 이러한 정보에는 다음이 포합됩니다.</string>
    <string name="terms_of_service_6">연락처 정보, 계정, 프로필 정보.</string>
    <string name="terms_of_service_7">회원님의 이름, 전화번호, 이메일 주소, 생년월일, 프로필 사진 등.</string>
    <string name="terms_of_service_8">회원님이 자발적으로 피플히어에 제공하는 정보</string>
    <string name="terms_of_service_9">회원님은 추가적인 개인정보를 피플히어에 제공할 수 있습니다. 이러한 정보에는 다음이 포함될 수 있습니다.</string>
    <string name="terms_of_service_10">추가적인 프로필 정보.</string>
    <string name="terms_of_service_11">구사하는 언어, 거주 도시, 인적 사항 등. 이러한 정보는 공개 프로필 페이지에 포함되며 다른 사람들이 볼 수 있습니다.</string>
    <string name="terms_of_service_12">기타 정보.</string>
    <string name="terms_of_service_13">예를들어, 양식을 작성하거나, 계정에 정보를 추가하거나, 설문조사에 응답하거나, 프로모션에 참여하거나, 커뮤니티에 데이트립을 만들어 올리거나, 당사의 고객지원팀 및 다른 회원들과 소통하거나, 본인의 경험을 당사와 공유하는 경우. 여기에는 회원님이 당사에 자발적으로 공유하는 건강정보도 포함될 수 있습니다.</string>
    <string name="terms_of_service_14">수집한 정보의 활용</string>
    <string name="terms_of_service_15">피플히어 플랫폼의 제공, 개선, 개발</string>
    <string name="terms_of_service_16">예: 회원님이 다른 회원과 커뮤니케이션할 수 있도록 지원.</string>
    <string name="terms_of_service_17">보유 기간</string>
    <string name="terms_of_service_18">기본적으로 사용자가 게정 삭제 또는 게정 탈퇴를 요청하는 경우 당사는 사용자의 개인정보를 삭제 처리합니다.</string>
    <string name="terms_of_service_19">개인정보 수집 및 이용을 거부할 권리</string>
    <string name="terms_of_service_20">사용자는 개인정보 수집 및 이용을 거부할 권리가 있습니다. 사용자가 회원가입 과정에서 필수로 요구되는 최소한의 개인정보의 수집 및 이용을 거부하는 경우, 피플히어 서비스 이용이 어려울 수 있습니다.</string>
    <string name="dialog_help_example">투어 유형 예시</string>
    <string name="dialog_help_ok">확인</string>
    <string name="main_tour_list">투어 리스트</string>
    <string name="main_tour_course">투어 코스</string>
    <string name="main_search">검색</string>
    <string name="main_search_hint">장소명, 지역명, 주소 검색</string>
    <string name="main_search_recent">최근 검색 내역</string>
    <string name="main_tour_search_headline">어떤 투어를 할까요?</string>
    <string name="main_tour_search_subtitle">대한민국·모든투어</string>
    <string name="main_tv_time">시간</string>
    <string name="main_see_list">목록 보기</string>
    <string name="main_see_map">지도 보기</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cost_input_exit">저장 후 나가기</string>
    <string name="cost_input_total_notice">1인당 총 경비를 알려주세요</string>
    <string name="cost_input_explain_1">각 장소의 이용료, 식비, 기념품 구매 비용 등</string>
    <string name="cost_input_explain_2">여행자가 지참해야 하는 경비의 예상 금액을 입력하세요</string>
    <string name="cost_input_total_cost">총 경비:</string>
    <string name="cost_input_total_cost_input">\0원</string>
    <string name="cost_input_item_cost_input">\경비 입력</string>
    <string name="cost_input_item_cost_no">\경비 없음</string>
    <string name="cost_input_item_next">\다음</string>
    <string name="cost_keep">\저장</string>
    <string name="cost_add">\여행자에 따라 추가 금액이 발생할 수 있어요</string>
    <string name="dialog_cost_exit_text_exit">\경비 입력 나가기</string>
    <string name="dialog_cost_exit_explain">\입력한 금액을 저장하지 않고 나갑니다.</string>
    <string name="dialog_cost_exit_keep_going">\계속 입력</string>
    <string name="dialog_cost_exit_btn_exit">\나가기</string>
    <string name="activity_introduce_exit">\저장 후 나가기</string>
    <string name="activity_introduce_headline">\마지막으로,\n소개를 작성하세요</string>
    <string name="activity_introduce_guideline">\계획한 코스를 따라 무엇을 하게 되는지 알려주세요.</string>
    <string name="activity_caution_exit">\저장 후 나가기</string>
    <string name="activity_caution_headline">\투어 주의사항을 작성하세요</string>
    <string name="activity_caution_guideline">\여행자가 투어 전에 알아두어야 할 사항들을 알려주세요.</string>
    <string name="activity_add_picture_explain">\관련 사진을 추가하세요</string>
    <string name="activity_add_picture_drag">\사진을 드래그 해서 순서를 변경하세요.</string>
    <string name="activity_add_picture_minimum">\최소 한 장 이상의 장소별 사진을 추가하세요.</string>
    <string name="activity_add_picture_add">\사진 추가</string>
    <string name="activity_add_picture_right_introduce">\저작권법을 위반한 사진은 임의로 삭제될 수 있습니다.</string>
    <string name="fragment_location_choose_choose_location">\사진을 추가할 장소를 선택하세요.</string>
    <string name="fragment_location_choose_choose">\선택</string>
    <string name="dialog_select_picture_my_gallery">\앨범에서 ✨내가 찍은 사진✨ 추가</string>
    <string name="dialog_select_picture_basic_pic">\구글 기본 이미지 사용</string>
    <string name="item_add_picture_name">\장소 이름</string>
    <string name="item_add_picture_string">\대표사진</string>
    <string name="toast_category_string">\최대 3개까지 선택할 수 있어요 </string>
    <string name="fragment_profile_my_profile">\나의 프로필</string>
    <string name="fragment_profile_my_daytrip">\나의 데이트립</string>
    <string name="fragment_profile_come">\다가오는 만남</string>
    <string name="fragment_profile_past">\지난 만남</string>
    <string name="fragment_profile_first_login1">\사람들과 만남을 계획하려면</string>
    <string name="fragment_profile_first_login2">로그인하세요</string>
    <string name="fragment_profile_first_signup">로그인 또는 회원가입</string>
    <string name="fragment_profile_first_profile">프로필</string>
    <string name="item_profile_no_text1">\피플히어를 둘러보고</string>
    <string name="item_profile_no_text2">\사람들을 만나보세요</string>
    <string name="fragment_message_message">\메세지</string>
    <string name="fragment_message_explain1">\메시지를 보려면 로그인하세요</string>
    <string name="fragment_message_explain2">\로그인하면 여기에 사람들이 보낸 메시지가 표시돼요.</string>
    <string name="activity_login_phone_login">\로그인 또는 회원가입</string>
    <string name="activity_login_phone_country">\국가/지역</string>
    <string name="activity_login_phone_korea">\대한민국 (+82)</string>
    <string name="activity_login_phone_message">\입력한 번호로 인증 문자를 전송합니다.</string>
    <string name="activity_alarm_ok_alarm">알림을 받으시겠어요?</string>
    <string name="activity_alarm_ok_new">새로운 메시지, 다가오는 만남 등 \n   &#160;  중요한 소식을 놓치지 마세요.</string>
    <string name="activity_alarm_ok_yes">네, 알림을 받을게요</string>
    <string name="activity_alarm_ok_later">나중에 설정하기</string>
</resources>