<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".SignUp.AlarmOkActivity">
    <ImageView
        android:id="@+id/iv_bell"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="42:52"
        app:layout_constraintWidth_percent="0.116"
        android:src="@drawable/illust"
        android:layout_marginTop="203dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_alarm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_alarm_ok_alarm"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:fontFamily="@font/suite_bold"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@id/iv_bell"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>
    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_alarm_ok_new"
        android:textColor="@color/Gray5"
        android:textSize="14sp"
        android:fontFamily="@font/pretendard_regular"
        android:layout_marginTop="6dp"
        app:layout_constraintTop_toBottomOf="@id/tv_alarm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_yes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="328:52"
        app:layout_constraintWidth_percent="0.91"
        android:background="@drawable/add_list_next_button"
        android:text="@string/activity_alarm_ok_yes"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:fontFamily="@font/pretendard_regular"
        android:layout_gravity="bottom"
        android:layout_marginTop="64dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_new"/>
    <TextView
        android:id="@+id/tv_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activity_alarm_ok_later"
        android:textColor="@color/Gray6"
        android:textSize="14sp"
        android:fontFamily="@font/pretendard_regular"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_yes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>